--- a/about.html
+++ b/about.html
@@ -242,7 +242,7 @@
 
     </section><!-- End Alt Services Section -->
     <section id="get-started" class="get-started section-bg">
-      <div class="container">
+      <!-- <div class="container"> -->
 
        <!--  <div class="justify-content-between gy-4">
 
@@ -263,7 +263,7 @@
             </div> -->
 
 
-            <div class="tarjeta">
+            <!-- <div class="tarjeta">
               <i class="icono fas fa-hard-hat"></i>
               <p class="descripcion">Servicio Técnico</p>
             </div>
@@ -282,43 +282,43 @@
               <i class="icono fas fa-concierge-bell"></i>
               <p class="descripcion">Servicio de alta calidad</p>
             </div>
-          </div>
-
-          
-
-          <!-- <div class="col-lg-5" data-aos="fade">
-            <form action="forms/quote.php" method="post" class="php-email-form">
-              <h3>Contactanos</h3>
-              <p class="texto-justificado">Nuestro equipo se contactara a la brevedad posible.</p>
-              <div class="row gy-3">
-
-                <div class="col-md-12">
-                  <input type="text" name="name" class="form-control" placeholder="Nombre" required>
-                </div>
-
-                <div class="col-md-12 ">
-                  <input type="email" class="form-control" name="email" placeholder="Email" required>
-                </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="phone" placeholder="Telefono" required>
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Mensaje" required></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Cargando</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Tu solicitud ha sido enviada con exito, Gracias!</div>
-
-                  <button type="submit">Enviar</button>
-                </div>
-
-              </div>
-            </form>
           </div> -->
+
+
+
+            <div class="contenedor">
+              <div class="card">
+                <i class="icono fas fa-concierge-bell"></i>
+                <p class="descripcion">Servicio de alta calidad en nuestros servicios y productos</p>
+                <a href="venta.html">Leer Más</a>
+              </div>
+            </div>
+
+            <div class="contenedor">
+              <div class="card">
+                <i class="icono fas fa-temperature-low"></i>
+                <p class="descripcion">Cámaras Frías</p>
+                <a href="">Leer Más</a>
+              </div>
+            </div>
+
+            <div class="contenedor">
+              <div class="card">
+                <i class="icono fas fa-tools"></i>
+                <p class="descripcion">Mantenimientos Preventivos y Correctivos</p>
+                <a href="mantenimientos.html">Leer Más</a>
+              </div>
+            </div>
+
+            <div class="contenedor">
+              <div class="card">
+                <i class="icono fas fa-hard-hat"></i>
+                <p class="descripcion">Servicio Técnico</p>
+                <a href="mantenimientos.html">Leer Más</a>
+              </div>
+            </div>
+
+
 
         </div>
 
