--- a/about.html
+++ b/about.html
@@ -287,32 +287,40 @@
 
 
             <div class="contenedor">
-              <div class="card">
-                <i class="icono fas fa-concierge-bell"></i>
+              <div class="tarjeta">
+                  <img src="img/10.png">
+                  <br>
+                  <br>
                 <p class="descripcion">Servicio de alta calidad en nuestros servicios y productos</p>
                 <a href="venta.html">Leer Más</a>
               </div>
             </div>
 
             <div class="contenedor">
-              <div class="card">
-                <i class="icono fas fa-temperature-low"></i>
+              <div class="tarjeta">
+                  <img src="img/camarafria.jpeg">
+                  <br>
+                  <br>
                 <p class="descripcion">Cámaras Frías</p>
                 <a href="">Leer Más</a>
               </div>
             </div>
 
             <div class="contenedor">
-              <div class="card">
-                <i class="icono fas fa-tools"></i>
+              <div class="tarjeta">
+                <img src="img/10.png">
+                <br>
+                <br>
                 <p class="descripcion">Mantenimientos Preventivos y Correctivos</p>
                 <a href="mantenimientos.html">Leer Más</a>
               </div>
             </div>
 
             <div class="contenedor">
-              <div class="card">
-                <i class="icono fas fa-hard-hat"></i>
+              <div class="tarjeta">
+                  <img src="img/10.png">
+                  <br>
+                  <br>
                 <p class="descripcion">Servicio Técnico</p>
                 <a href="mantenimientos.html">Leer Más</a>
               </div>
