--- a/about.html
+++ b/about.html
@@ -287,6 +287,7 @@
 
 
             <div class="contenedor">
+              <div class="col-lg-12">
               <div class="tarjeta">
                   <img src="img/10.png">
                   <br>
@@ -294,6 +295,7 @@
                 <p class="descripcion">Servicio de alta calidad en nuestros servicios y productos</p>
                 <a href="venta.html">Leer Más</a>
               </div>
+            </div>
             </div>
 
             <div class="contenedor">
