--- a/about.html
+++ b/about.html
@@ -263,7 +263,7 @@
             </div> -->
 
 
-            <!-- <div class="tarjeta">
+            <div class="tarjeta">
               <i class="icono fas fa-hard-hat"></i>
               <p class="descripcion">Servicio Técnico</p>
             </div>
@@ -282,10 +282,10 @@
               <i class="icono fas fa-concierge-bell"></i>
               <p class="descripcion">Servicio de alta calidad</p>
             </div>
-          </div> -->
+          </div>
 
 
-
+<!-- 
             <div class="contenedor">
               <div class="col-lg-12">
               <div class="tarjeta">
@@ -297,7 +297,7 @@
               </div>
             </div>
             </div>
-
+            
             <div class="contenedor">
               <div class="tarjeta">
                   <img src="img/camarafria.jpeg">
@@ -326,7 +326,7 @@
                 <p class="descripcion">Servicio Técnico</p>
                 <a href="mantenimientos.html">Leer Más</a>
               </div>
-            </div>
+            </div> -->
 
 
 
