--- a/index.html
+++ b/index.html
@@ -362,6 +362,10 @@
               <p class="texto-justificado">Nuestros aires acondicionados y sistemas de refrigeración son conocidos por su funcionamiento silencioso y sin problemas. Disfruta de un ambiente tranquilo y fresco sin molestias ruidosas ni interrupciones.</p>
               <h5>Servicio y Soporte</h5>
               <p class="texto-justificado">No solo vendemos productos, sino que también ofrecemos un excepcional servicio postventa. Nuestro equipo de expertos está disponible para ayudarte con la instalación, el mantenimiento y cualquier consulta que puedas tener.</p>
+              <br>
+              <p classs="texto-justificado">Para garantizar el correcto funcionamiento de una instalación, es necesario verificar el caudal en los conductos, de modo que se proporcione la cantidad correcta de aire renovado y se establezca una determinada temperatura y humedad de los locales.</p>
+              <br>
+              <p class="texto-justificado"> Con termómetros y termóstatos se controla la temperatura de los locales y con un higrómetro se calcula la humedad. Además, se realiza un análisis estructural del local o de la planta, para verificar el correcto funcionamiento del equipo. La información recopilada se compara con los datos utilizados durante la fase de diseño de la planta. Los cálculos se realizan en función de las nuevas necesidades</p>
             </div>
           </div>
 
