--- a/about.html
+++ b/about.html
@@ -242,9 +242,9 @@
 
     </section><!-- End Alt Services Section -->
     <section id="get-started" class="get-started section-bg">
-      <!-- <div class="container"> -->
+      <div class="container">
 
-       <!--  <div class="justify-content-between gy-4">
+        <div class="justify-content-between gy-4">
 
           <div class="col-lg-13 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
@@ -260,10 +260,10 @@
               </ul>
               <br>
               <p class="texto-justificado">En resumen, una empresa dedicada a aires acondicionados y sistemas de refrigeración no solo brinda beneficios tangibles a los clientes en términos de confort y eficiencia, sino que también tiene un impacto positivo en la comunidad y en el medio ambiente a través de la promoción de tecnologías sostenibles y prácticas responsables.</p>
-            </div> -->
+            </div>
 
 
-            <div class="tarjeta">
+            <!-- <div class="tarjeta">
               <i class="icono fas fa-hard-hat"></i>
               <p class="descripcion">Servicio Técnico</p>
             </div>
@@ -282,7 +282,7 @@
               <i class="icono fas fa-concierge-bell"></i>
               <p class="descripcion">Servicio de alta calidad</p>
             </div>
-          </div>
+          </div> -->
 
 
 <!-- 
