--- a/venta.html
+++ b/venta.html
@@ -101,7 +101,7 @@
                <!--  <img src="assets/img/D.jpeg" alt="" class="img-fluid"> -->
               </div>
               <div class="content">
-                <h2 class="text-center">Nuestra Gama de Productos</h2>
+                <h2 class="text-center">Nuestros Productos</h2>
                 <br>
                 <p class="texto-justificado">
                   <strong>Aires Acondicionados Split:</strong>Ideales para enfriar habitaciones individuales de manera eficiente y silenciosa.
