--- a/optimizacion.html
+++ b/optimizacion.html
@@ -382,8 +382,8 @@
 
           <div class="col-lg-4">
 
-            <div class="sidebar">
-<!-- 
+            <!-- <div class="sidebar">
+
               <div class="sidebar-item search-form">
                 <h3 class="sidebar-title">Search</h3>
                 <form action="" class="mt-3">
@@ -402,7 +402,7 @@
                   <li><a href="#">Creative <span>(8)</span></a></li>
                   <li><a href="#">Educaion <span>(14)</span></a></li>
                 </ul>
-              </div> -->
+              </div>
 
               <div class="sidebar-item recent-posts">
                 <h3 class="sidebar-title">Demás Servicios</h3>
@@ -441,7 +441,7 @@
 
                 </div>
 
-              </div>
+              </div> -->
 
               <!-- <div class="sidebar-item tags">
                 <h3 class="sidebar-title">Tags</h3>
