--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
         <img src="img/logo-aires-mirage.png" alt="imagen2">
       </div>
       <div class="slide">
-        <img src="img/lg_logo_new.jpeg" alt="imagen3">
+        <img src="img/logo-Electrolux.png" alt="imagen3">
       </div>
       <div class="slide">
         <img src="img/trane_logo.png" alt="imagen4">
@@ -1040,7 +1040,7 @@
         <img src="img/logo-aires-mirage.png" alt="imagen2">
       </div>
       <div class="slide">
-        <img src="img/lg_logo_new.jpeg" alt="imagen3">
+        <img src="img/logo-Electrolux.png" alt="imagen3">
       </div>
       <div class="slide">
         <img src="img/trane_logo.png" alt="imagen4">
@@ -1049,7 +1049,7 @@
         <img src="img/f.1649261342.jpg" alt="imagen5">
       </div>
       <div class="slide">
-        <img src="img/trane_logo.png" alt="imagen6">
+        <img src="img/logo-Electrolux.png" alt="imagen6">
       </div>
       <div class="slide">
         <img src="img/logo-mitsubishi-electric-lasser.jpeg" alt="imagen7">
