--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <!-- ======= Services Section ======= -->
     <section id="blog" class="blog">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h1 class="text-center">Nuestros Servicios</h1>
+        <h1 class="text-center">Servicios Destacados</h1>
         <br>
         <div class="row gy-4 posts-list">
 
@@ -1015,45 +1015,101 @@
       <div class="slide">
         <img src="img/logo-mitsubishi-electric-lasser.jpeg" alt="imagen1">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/logo-aires-mirage.png" alt="imagen2">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/logo-Electrolux.png" alt="imagen3">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/trane_logo.png" alt="imagen4">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/f.1649261342.jpg" alt="imagen5">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/lg_logo_new.jpeg" alt="imagen6">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/Gree-Logo.png" alt="imagen7">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/logo-york-002.png" alt="imagen1">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/logo-aires-mirage.png" alt="imagen2">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/logo-Electrolux.png" alt="imagen3">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/trane_logo.png" alt="imagen4">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/f.1649261342.jpg" alt="imagen5">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/logo-Electrolux.png" alt="imagen6">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <div class="slide">
         <img src="img/logo-mitsubishi-electric-lasser.jpeg" alt="imagen7">
       </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      &nbsp;
     </div>
     </div>
    
