--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
     </section> -->
 
     <!-- ======= Our Projects Section ======= -->
-    <section id="projects" class="projects">
+    <!-- <section id="projects" class="projects">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -734,7 +734,7 @@
             <li data-filter=".filter-ventas">Venta</li>
             <li data-filter=".filter-remodeling">Mantenimiento</li>
             <li data-filter=".filter-construction">Servicio Técnico</li>
-           <!--  <li data-filter=".filter-sistespe">Sistemas Especializados</li> -->
+            <li data-filter=".filter-sistespe">Sistemas Especializados</li>
           </ul>
 
           <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
@@ -744,11 +744,11 @@
                 <img src="img/venta de aires.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Aire acondicionado</h4>
-                  <!-- <a href="img/aire-acondicionado-decoracion-interior.jpg"
+                  <a href="img/aire-acondicionado-decoracion-interior.jpg"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -758,11 +758,11 @@
                 <img src="img/cerrar-bomba-calor-fuera-casa.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sistema de enfriamiento</h4>
-                  <!-- <a href="img/cerrar-bomba-calor-fuera-casa.jpg" title="Construction 1"
+                  <a href="img/cerrar-bomba-calor-fuera-casa.jpg" title="Construction 1"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -772,10 +772,10 @@
                 <img src="img/electrico.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Mantenimiento Preventivo y Correctivo</h4>
-                  <!-- <a href="img/electrico.jpg" title="Repairs 1" data-gallery="portfolio-gallery-repairs"
+                  <a href="img/electrico.jpg" title="Repairs 1" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -785,10 +785,10 @@
                 <img src="img/encendidoaire.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Venta de Sistemas Intelifentes de Aire Acondicionado</h4>
-                  <!-- <a href="img/encendidoaire.webp" title="Repairs 1" data-gallery="portfolio-gallery-book"
+                  <a href="img/encendidoaire.webp" title="Repairs 1" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -799,11 +799,11 @@
                 <div class="portfolio-info">
                   <h4>Encendido de Aire Acondicionado</h4>
                   <p class="texto-justificado"></p>
-                  <!-- <a href="img/mujer-joven-tecnologia-casera.jpg<" title="Remodeling 2"
+                  <a href="img/mujer-joven-tecnologia-casera.jpg<" title="Remodeling 2"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -813,11 +813,11 @@
                 <img src="img/ventilacion.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Ventilacion sobre restaurante</h4>
-                  <!-- <a href="img/ventilacion.jpg " title="Construction 2"
+                  <a href="img/ventilacion.jpg " title="Construction 2"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -828,10 +828,10 @@
                 <div class="portfolio-info">
                   <h4>Servicio Tecnico</h4>
                   <p class="texto-justificado"></p>
-                  <!-- <a href="img/persona-que-trabaja-edificacion-construccion.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
+                  <a href="img/persona-que-trabaja-edificacion-construccion.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -841,10 +841,10 @@
                 <img src="img/personas-tiro-medio-casco-trabajo.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Mantenimiento Corrrectivo y Preventivo</h4>
-                  <!-- <a href="img/personas-tiro-medio-casco-trabajo.jpg" title="Repairs 2" data-gallery="portfolio-gallery-book"
+                  <a href="img/personas-tiro-medio-casco-trabajo.jpg" title="Repairs 2" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -854,11 +854,11 @@
                 <img src="img/sistemaespecializadorefri.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sistema de Refrigeracion Industrial</h4>
-                  <!-- <a href="img/sistema-refrigeracion-activa-aire.png" title="Remodeling 3"
+                  <a href="img/sistema-refrigeracion-activa-aire.png" title="Remodeling 3"
                     data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -869,11 +869,11 @@
                 <div class="portfolio-info">
                   <h4>Construction 3</h4>
                   <p class="texto-justificado"></p>
-                  <!-- <a href="img/sistrefri.jpg" title="Construction 3"
+                  <a href="img/sistrefri.jpg" title="Construction 3"
                     data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -883,10 +883,10 @@
                 <img src="img/Eficiencia-Energetica-ciudades-SI.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Eficiencia Energetica</h4>
-                  <!-- <a href="assets/img/projects/repairs-3.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
+                  <a href="assets/img/projects/repairs-3.jpg" title="Repairs 2" data-gallery="portfolio-gallery-repairs"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -896,10 +896,10 @@
                 <img src="img/sistemarefrigeracionoespecial.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Sistema Especializdos</h4>
-                  <!-- <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
+                  <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -909,10 +909,10 @@
                 <img src="img/servtecnico.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Servicio Tecnico</h4>
-                  <!-- <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
+                  <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -922,10 +922,10 @@
                 <img src="img/240-640w.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Servicio Tecnico </h4>
-                  <!-- <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
+                  <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>      
@@ -935,21 +935,21 @@
                 <img src="img/instalacion-de-aire-acondicionado.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Servicio Tecnico </h4>
-                  <!-- <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
+                  <a href="assets/img/projects/design-3.jpg" title="Repairs 3" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="project-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
+                      class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>     
 
 
-          </div><!-- End Projects Container -->
+          </div>
 
         </div>
 
       </div>
-    </section>
+    </section> -->
 
 <!--     
     <section id="testimonials" class="testimonials section-bg">
