--- a/optimizacion.html
+++ b/optimizacion.html
@@ -46,12 +46,9 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
-          <!-- <li><a href="services.html">Servicios</a></li> -->
-          <!-- <li><a href="projects.html">Projects</a></li> -->
-          <!-- <li><a href="blog.html">Blog</a></li> -->
-          <li class="dropdown"><a href="#" class="active"><span>Servicios</span> <i
+          <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="venta.html">Ventas e Instalación </a></li>
@@ -65,16 +62,17 @@
                   <li><a href="#">SubServicios 6</a></li>
                 </ul>
               </li> -->
-              <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
-              <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
-              <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
-              <li><a href="disenoyconsultoria.html">Diseño y Consultoía</a></li>
+              <li><a href="mantenimientos.html">Mantenimiento y Servicio Técnico </a></li>
+              <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
               <!-- <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
             </ul>
           </li>
           <li><a href="politica-privacidad.html">Privacidad</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
+        <!-- &nbsp;
+        &nbsp; 
+        <a class="btn btn-primary" href="contact.html" role="button">Solicita una Cotización</a> -->
       </nav><!-- .navbar -->
 
     </div>
