--- a/about.html
+++ b/about.html
@@ -51,11 +51,8 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="about.html" class="active">Nosotros</a></li>
-          <!-- <li><a href="services.html">Servicios</a></li> -->
-          <!-- <li><a href="projects.html">Projects</a></li> -->
-          <!-- <li><a href="blog.html">Blog</a></li> -->
+          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="about.html">Nosotros</a></li>
           <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
@@ -70,16 +67,17 @@
                   <li><a href="#">SubServicios 6</a></li>
                 </ul>
               </li> -->
-              <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
-              <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
-              <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
+              <li><a href="mantenimientos.html">Mantenimiento y Servicio Técnico </a></li>
               <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
               <!-- <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
-            </ul
+            </ul>
           </li>
           <li><a href="politica-privacidad.html">Privacidad</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
+        <!-- &nbsp;
+        &nbsp; 
+        <a class="btn btn-primary" href="contact.html" role="button">Solicita una Cotización</a> -->
       </nav><!-- .navbar -->
 
     </div>
