--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
                   <li><a href="#">SubServicios 6</a></li>
                 </ul>
               </li> -->
-              <li><a href="mantenimientos.html">Mantenimiento Preventivo </a></li>
-              <li><a href="reparacionyservicios.html">Reparación y Servicio Técnico</a></li>
-              <li><a href="optimizacion.html">Optimización de Eficacia Energética </a></li>
+              <li><a href="mantenimientos.html">Mantenimiento y Servicio Técnico </a></li>
               <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
               <!-- <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
             </ul>
