--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
-          <li><a href="about.html">Nosotros</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="about.html" class="active">Nosotros</a></li>
           <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
