--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
           <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -71,7 +71,7 @@
             </ul>
           </li>
           <li><a href="politica-privacidad.html">Privacidad</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="contact.html" class="active">Contacto</a></li>
         </ul>
         <!-- &nbsp;
         &nbsp; 
