--- a/disenoyconsultoria.html
+++ b/disenoyconsultoria.html
@@ -48,7 +48,7 @@
         <ul>
           <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
-          <li class="dropdown"><a href="#"><span>Servicios</span> <i
+          <li class="dropdown"><a href="#" class="active"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="venta.html">Ventas e Instalación </a></li>
