--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -49,7 +49,7 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
           <li class="dropdown"><a href="#"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -70,7 +70,7 @@
               <!-- <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
             </ul>
           </li>
-          <li><a href="politica-privacidad.html">Privacidad</a></li>
+          <li><a href="politica-privacidad.html" class="active">Privacidad</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
         <!-- &nbsp;
