--- a/venta.html
+++ b/venta.html
@@ -46,9 +46,9 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
-          <li class="dropdown"><a href="#"><span>Servicios</span> <i
+          <li class="dropdown"><a href="#" class="active"><span>Servicios</span> <i
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="venta.html">Ventas e Instalación </a></li>
