--- a/mantenimientos.html
+++ b/mantenimientos.html
@@ -526,9 +526,8 @@
             <h4>Servicios</h4>
             <ul>
               <li><a href="venta.html">Venta e Instalación</a></li>
-              <li><a href="mantenimientos.html">Mantenimiento Preventivo</a></li>
-              <li><a href="reparacionyservicios.html">Reparación y Servicio Tecnico</a></li>
-              <li><a href="optimizacion.html">Optimizacion de Eficacia Energética</a></li>
+              <li><a href="mantenimientos.html">Mantenimiento y Servicio Técnico</a></li>
+              <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
              <!--  <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
             </ul>
           </div>
