--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -126,7 +126,7 @@
 
           <div class="col-lg-12">
             <div class="portfolio-description">
-              <h1 class="">Políticas de Privacidad</h1>
+              <h1 class="text-center">Políticas</h1>
               <br>
               <p class="texto-justificado">
                 <strong>SIARSA</strong> , Es responsable de recabar sus datos personales, del uso que se le dé a los mismos y de su protección, Su información personal será utilizada para promover los 
