--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
             <p class="texto-justificado"><h3 class="text-center">¿Dudas y comentarios?</h3></p>
             <p class="texto-justificado"><h3 class="text-center">¡Contactanos hoy mismo!</h3></p>
             <div class="container-fluid py-5">
-                  <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                  <form action="forms/contact.php" method="post" role="form" >
                   <div class="row justify-content-center">
                       <div class="col-lg-7">
                           <div class="bg-light rounded p-4 p-sm-5 wow fadeInUp" data-wow-delay="0.1s">
