--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
 
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
-      <div class="carousel-item active" style="background-image: url(img/mantenimiento-sistema.jpg)">
-      </div>
+      <div class="carousel-item active" style="background-image: url(img/mantenimiento-sistema.jpg)"></div>
       <div class="carousel-item" style="background-image: url(img/Reparar-aire-acondicionado.jpg.webp)"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-3.jpg)"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-4.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(img/suministrode\ HVLS.png)"></div>
+      <div class="carousel-item" style="background-image: url(img/Sistema-de-Control-de-Aire-Comprimido-2.jpg)"></div>
       <div class="carousel-item" style="background-image: url(img/testvalvulas.jpg)"></div>
 
       <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
@@ -213,7 +212,8 @@
     <!-- ======= Services Section ======= -->
     <section id="blog" class="blog">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h1 class="text-center">Servicios Destacados</h1>
+        <h1 class="text-center">Amplia gama de servicios en sitio </h1>
+        <br>
         <br>
         <div class="row gy-4 posts-list">
 
