--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
-    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/feliz-hombre-negocios-cooperando-su-colega-mientras-trabajaba-oficina.jpg');">
+    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/services.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
         <h2>Contacto</h2>
