--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -146,6 +146,12 @@
                 Si usted desea dejar de recibir mensajes promocionales de nuestra parte puede solicitarlo a través del teléfono: <strong> 55-7929-0992</strong> y al teléfono <strong>contacto@siarsa.com.mx</strong>
               </p>
 
+              <p class="texto-justificado">
+                En cumplimiento de la LOPD, le informamos que sus datos podrían pasar a formar parte de SIARSA. Usted tiene derecho de acceso, rectificación, oposición y canclación que puede ejercer
+            mediante escrito a la dirección anteriormente indicada. Por la presente autoriza expresamente a la compañia a que le remita información sobre sus servicios a la direcciónde correo indicada en el formulario. 
+          La información ofrecida en esta página web es meramente orientativa y no es , en nigún caso, vinculante.
+              </p>
+
             </div>
           </div>
 
