--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
 
           <div class="col-lg-12">
             <p class="texto-justificado"><h3 class="text-center">¿Dudas y comentarios?</h3></p>
-            <p class="texto-justificado"><h3 class="text-center">¡Contactanos hoy mismo!</h3></p>
+            <p class="texto-justificado"><h3 class="text-center">¡Contactános hoy mismo!</h3></p>
             <div class="container-fluid py-5">
                   <form action="forms/contact.php" method="post" role="form" >
                   <div class="row justify-content-center">
