--- a/about.html
+++ b/about.html
@@ -265,7 +265,7 @@
           
             <div class="tarjeta">
               <i class="icono fas fa-concierge-bell"></i>
-              <p class="descripcion">Servicio de alta calidad</p>
+              <p class="descripcion">Servicios y Productos de Excelente Calidad</p>
             </div>
 
             
