--- a/disenoyconsultoria.html
+++ b/disenoyconsultoria.html
@@ -248,7 +248,7 @@
                       <div class="portfolio-content h-100">
                         <img src="img/diseño3.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                          <h4>Aire acondicionado</h4>
+                          <h4>Diseños de excelente calidad para tus proyectos</h4>
                           <!-- <a href="img/aire-acondicionado-decoracion-interior.jpg"
                             data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
                               class="bi bi-zoom-in"></i></a>
@@ -262,7 +262,7 @@
                       <div class="portfolio-content h-100">
                         <img src="img/diseño1.png" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                          <h4>Sistema de enfriamiento</h4>
+                          <h4>Modelos hechos a la medida</h4>
                           <!-- <a href="img/cerrar-bomba-calor-fuera-casa.jpg" title="Construction 1"
                             data-gallery="portfolio-gallery-construction" class="glightbox preview-link"><i
                               class="bi bi-zoom-in"></i></a>
@@ -276,7 +276,7 @@
                       <div class="portfolio-content h-100">
                         <img src="img/DISENO-HVAC-0-1.jpeg" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                          <h4>Venta de Sistemas Intelifentes de Aire Acondicionado</h4>
+                          <h4>Diseños Hechos en CAD</h4>
                           <!-- <a href="img/encendidoaire.webp" title="Repairs 1" data-gallery="portfolio-gallery-book"
                             class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                           <a href="project-details.html" title="More Details" class="details-link"><i
