--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
-    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/técnicos-1024x244.jpg');">
+    <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/hvacwallpaper.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
         <h2>Nosotros</h2>
