--- a/disenoyconsultoria.html
+++ b/disenoyconsultoria.html
@@ -287,9 +287,9 @@
         
                     <div class="col-lg-4 col-md-6 portfolio-item filter-ventas">
                       <div class="portfolio-content h-100">
-                        <img src="img/" class="img-fluid" alt="">
+                        <img src="img/planimetria.jpeg" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                          <h4>Encendido de Aire Acondicionado</h4>
+                          <h4>Diseños</h4>
                           <p class="texto-justificado"></p>
                           <!-- <a href="img/mujer-joven-tecnologia-casera.jpg<" title="Remodeling 2"
                             data-gallery="portfolio-gallery-remodeling" class="glightbox preview-link"><i
