--- a/contact.html
+++ b/contact.html
@@ -275,7 +275,7 @@
           &copy; Copyright <strong><span>SIARSA</span></strong>. Todos los derechos son reservados.<script>document.write(new Date().getFullYear())</script>
         </div>
         <div class="credits">
-          Consulta Nuestro<a href="politica-privacidad.html">Aviso de Privacidad</a> 
+          Consulta Nuestro&nbsp;&nbsp;&nbsp;<a href="politica-privacidad.html">Aviso de Privacidad</a> 
         </div>
       </div>
     </div>
