--- a/index.html
+++ b/index.html
@@ -1187,7 +1187,7 @@
      <!-- <center> <img class="img-fluid" src="img/marcas-aires.png"></center> -->
      <br>
      <br>
-   <!-- <div class="slider">
+  <div class="slider">
     <div class="slider-track">
       <div class="slide ">
         <img src="img/logo-mitsubishi-electric-lasser.jpeg" alt="imagen1">
@@ -1288,7 +1288,7 @@
       &nbsp;
       &nbsp;
     </div>
-    </div> -->
+    </div>
    
     
     </section>
