--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,8 @@
                       </div>
                   </div>
                   </form>
-              
+                  <br>
+                  <p class="texto-justificado text-center"><a href="politica-privacidad.html">Consulta Nuestros Terminos y Condiciones</a> </h3></p> 
           </div>
         </div>
 
