--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
                   </div>
                   </form>
                   <br>
-                  <p class="texto-justificado text-center"><a href="politica-privacidad.html">Consulta Nuestros Terminos y Condiciones</a> </h3></p> 
+                  <p class="texto-justificado text-center"><a href="politica-privacidad.html">Consulta Nuestros Términos y Condiciones</a> </h3></p> 
           </div>
         </div>
 
