--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -13,7 +13,7 @@
   <link href="img/logo-siarsa.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
+  <!-- Fuentes de Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -35,14 +35,12 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+  <!-- ======= Cabecera ======= -->
   <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="img/logo-siarsa.png" alt="logo inicio siarsa">
-        <!-- <h1>UpConstruction<span>.</span></h1> -->
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -55,30 +53,16 @@
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="venta.html">Ventas e Instalación </a></li>
-              <!-- <li class="dropdown"><a href="#"><span>SubServicios 1</span> <i
-                    class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">SubServicios 2</a></li>
-                  <li><a href="#">SubServicios 3</a></li>
-                  <li><a href="#">SubServicios 4</a></li>
-                  <li><a href="#">SubServicios 5</a></li>
-                  <li><a href="#">SubServicios 6</a></li>
-                </ul>
-              </li> -->
               <li><a href="mantenimientos.html">Mantenimiento y Servicio Técnico </a></li>
               <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
-              <!-- <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
             </ul>
           </li>
           <li><a href="politica-privacidad.html" class="active">Privacidad</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
-        <!-- &nbsp;
-        &nbsp; 
-        <a class="btn btn-primary" href="contact.html" role="button">Solicita una Cotización</a> -->
-      </nav><!-- .navbar -->
+      </nav>
     </div>
-  </header><!-- End Header -->
+  </header>
 
   <main id="main">
 
@@ -90,40 +74,10 @@
       </div>
     </div><!-- End Breadcrumbs -->
 
-    <!-- ======= Projet Details Section ======= -->
+    <!-- ======= Sección de Detalles ======= -->
     <section id="project-details" class="project-details">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <!-- <div class="position-relative h-100">
-          <div class="slides-1 portfolio-details-slider swiper">
-            <div class="swiper-wrapper align-items-center">
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/remodeling-1.jpg" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/construction-1.jpg" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/design-1.jpg" alt="">
-              </div>
-
-              <div class="swiper-slide">
-                <img src="assets/img/projects/repairs-1.jpg" alt="">
-              </div>
-
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-        </div> -->
-
         <div class="row justify-content-between gy-4 mt-4">
-
           <div class="col-lg-12">
             <div class="portfolio-description">
               <h1 class="text-center">Políticas</h1>
@@ -154,28 +108,14 @@
 
             </div>
           </div>
-
-          <!-- <div class="col-lg-3">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong> <span>Web design</span></li>
-                <li><strong>Client</strong> <span>ASU Company</span></li>
-                <li><strong>Project date</strong> <span>01 March, 2020</span></li>
-                <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
-                <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
-              </ul>
-            </div>
-          </div> -->
-
         </div>
 
       </div>
-    </section><!-- End Projet Details Section -->
+    </section><!-- final de sección de detalles -->
 
-  </main><!-- End #main -->
+  </main><!-- Fin de main -->
 
-  <!-- ======= Footer ======= -->
+  <!-- ======= Pie de Página ======= -->
   <footer id="footer" class="footer">
 
     <div class="footer-content position-relative">
@@ -215,7 +155,6 @@
               <li><a href="venta.html">Venta e Instalación</a></li>
               <li><a href="mantenimientos.html">Mantenimiento y Servicio Técnico</a></li>
               <li><a href="disenoyconsultoria.html">Diseño y Consultoría</a></li>
-             <!--  <li><a href="sistemasespeciales.html">Sistemas Especializados</a></li> -->
             </ul>
           </div>
 
@@ -259,7 +198,7 @@
       </div>
 
   </footer>
-  <!-- End Footer -->
+  <!-- Fin de Pie de Página -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
