--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
 
             </div>
           </div>
-        </div><!-- End blog posts list -->
+        </div>
 
 
       </div>
-    </section><!-- End Blog Section -->
+    </section>
 
 
     <section id="get-started" class="get-started section-bg">
@@ -324,10 +324,9 @@
       </div>
     </section>
 
-    <!-- ======= Recent Blog Posts Section ======= -->
+
     <section id="recent-blog-posts" class="recent-blog-posts">
       <div class="container" data-aos="fade-up"">
-    
       <h1 class="text-center">Trabajamos con equipos de las mejores marcas</h1>
      <br>
      <br>
@@ -438,9 +437,9 @@
    
     
     </section>
-    <!-- End Recent Blog Posts Section -->
+   
 
-  </main><!-- End #main -->
+  </main>
 
    
   <footer id="footer" class="footer">
@@ -526,14 +525,14 @@
     </div>
 
   </footer>
-  <!-- End Footer -->
+  
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
+  
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -542,7 +541,7 @@
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+ 
   <script src="assets/js/main.js"></script>
 
 </body>
