--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
   <link href="img/logo-siarsa.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
+  <!-- Fuentes de Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
+
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+
   <link href="assets/css/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-KyZXEAg3QhqLMpG8r+Knujsl5+z0I5t9z6pkFJzE1mis9R4XLu5EK6rF0q5GwUfjAk6H4MhJ8Mqq9pNuWZwARA=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -37,7 +37,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+
   <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
@@ -69,7 +69,7 @@
 
   <main id="main">
 
-    <!-- ======= Breadcrumbs ======= -->
+   
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('img/hvacwallpaper.jpg');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
@@ -102,7 +102,7 @@
 
     </section>
 
-    <!-- ======= Alt Services Section ======= -->
+    <!-- ======= seccion de servicios ======= -->
     <section id="alt-services" class="alt-services">
       <div class="container" data-aos="fade-up">
 
@@ -206,7 +206,7 @@
 
   </main>
 
-  <!-- ======= Footer ======= -->
+  <!-- ======= Pie de Página ======= -->
   <footer id="footer" class="footer">
 
     <div class="footer-content position-relative">
@@ -293,14 +293,14 @@
     </div>
 
   </footer>
-  <!-- End Footer -->
+  <!-- Fin de pie de página -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
+  <!-- archivos JS Vendor -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -309,7 +309,7 @@
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- Template js archivo -->
   <script src="assets/js/main.js"></script>
 
 </body>
