--- a/disenoyconsultoria.html
+++ b/disenoyconsultoria.html
@@ -86,7 +86,7 @@
               <h3 class="texto-justificado">Ingenieria y evaluaciones de estatus de instalaciones para brindar la máxima  de sus equipos.</h3>
               <p class="texto-justificado">Son procesos fundamentales para garantizar el rendimiento óptimo de equipos y sistemas en diversos entornos, desde instalaciones industriales hasta edificios comerciales.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
@@ -96,7 +96,7 @@
               <h3 class="texto-justificado">Construcción de cuartos de conservacion de congelados</h3>
               <p class="texto-justificado">Implica la creación de instalaciones específicamente diseñadas para mantener productos a bajas temperaturas, generalmente por debajo de cero grados Celsius, con el fin de preservar su frescura y calidad. Estos cuartos son esenciales en la industria de alimentos y en otros sectores donde se requiere el almacenamiento prolongado de productos perecederos.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
@@ -106,7 +106,7 @@
               <h3 class="texto-justificado">Construccion de naves para seco y regrigeración y congelación</h3>
               <p class="texto-justificado">Implica la creación de instalaciones específicamente diseñadas para mantener productos a bajas temperaturas, generalmente por debajo de cero grados Celsius, con el fin de preservar su frescura y calidad. Estos cuartos son esenciales en la industria de alimentos y en otros sectores donde se requiere el almacenamiento prolongado de productos perecederos.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
@@ -116,7 +116,7 @@
               <h3 class="texto-justificado">Ingeniería y evaluaciones de estatus de instalaciones para bridar la máxima capacidad de sus equipos</h3>
               <p class="texto-justificado">Un proceso especializado que implica la creación de instalaciones diseñadas para el almacenamiento eficiente y seguro de productos secos, refrigerados o congelados.</p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
@@ -126,7 +126,7 @@
               <h3 class="texto-justificado">Mantenimiento a instalaciones con la mejor calidad, seguridad y atención.</h3>
               <p class="texto-justificado">Implica un enfoque integral para garantizar el funcionamiento óptimo de los equipos y sistemas, minimizar riesgos y ofrecer un servicio de calidad a los usuarios.</p>
             </div>
-          </div><!-- End Service Item -->       
+          </div>       
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item position-relative">
@@ -136,7 +136,7 @@
               <h3 class="texto-justificado">Calculo y suministro e instalación de equipos para temperatura controlada</h3>
               <p class="texto-justificado">Es un proceso esencial en la creación y mantenimiento de entornos controlados térmicamente, como almacenes frigoríficos, laboratorios, instalaciones médicas o áreas de producción.</p>
             </div>
-          </div><!-- End Service Item -->    
+          </div>    
 
 
 
